[gd_scene load_steps=70 format=2]

[ext_resource path="res://shaders/cameras_&_ui/menu_background.tres" type="Shader" id=1]
[ext_resource path="res://scripts/managers/menu_manager.gd" type="Script" id=2]
[ext_resource path="res://resources/fonts/metal-mania.regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/particles/loading_bullets.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/cameras_&_ui/front_container.gd" type="Script" id=5]
[ext_resource path="res://scripts/managers/settings_manager.gd" type="Script" id=6]
[ext_resource path="res://scripts/cameras_&_ui/main.gd" type="Script" id=7]
[ext_resource path="res://scripts/audio/global_audio_player.gd" type="Script" id=9]
[ext_resource path="res://scripts/cameras_&_ui/menu_viewport_container.gd" type="Script" id=10]
[ext_resource path="res://scripts/audio/music_player.gd" type="Script" id=20]
[ext_resource path="res://resources/music/theme_1/G4F T.1_Sweep before intro NO LOOP.wav" type="AudioStream" id=21]
[ext_resource path="res://resources/sounds/cameras_&_ui/switch_button_push_on_off_12.wav" type="AudioStream" id=23]
[ext_resource path="res://resources/sounds/cameras_&_ui/switch_button_push_on_off_22.wav" type="AudioStream" id=24]
[ext_resource path="res://scripts/precompiler.gd" type="Script" id=26]
[ext_resource path="res://scenes/particles/chainsaw_sparks.tscn" type="PackedScene" id=27]
[ext_resource path="res://scenes/particles/chainsaw_sparks_cpu.tscn" type="PackedScene" id=28]
[ext_resource path="res://scenes/particles/burst_flame.tscn" type="PackedScene" id=29]
[ext_resource path="res://scenes/particles/burst_flame_cpu.tscn" type="PackedScene" id=30]
[ext_resource path="res://scenes/particles/acid.tscn" type="PackedScene" id=31]
[ext_resource path="res://scenes/particles/acid_cpu.tscn" type="PackedScene" id=32]
[ext_resource path="res://scenes/particles/flamethrower_flame.tscn" type="PackedScene" id=33]
[ext_resource path="res://scenes/particles/godrays.tscn" type="PackedScene" id=34]
[ext_resource path="res://scenes/particles/death_explosion.tscn" type="PackedScene" id=35]
[ext_resource path="res://scenes/particles/drift_smoke.tscn" type="PackedScene" id=36]
[ext_resource path="res://scenes/particles/death_smoke.tscn" type="PackedScene" id=37]
[ext_resource path="res://scenes/particles/flamethrower_flame_cpu.tscn" type="PackedScene" id=38]
[ext_resource path="res://scenes/particles/godrays_cpu.tscn" type="PackedScene" id=39]
[ext_resource path="res://scenes/particles/pull_cpu.tscn" type="PackedScene" id=40]
[ext_resource path="res://scenes/particles/nitro_flame_cpu.tscn" type="PackedScene" id=41]
[ext_resource path="res://scenes/particles/pull.tscn" type="PackedScene" id=42]
[ext_resource path="res://scenes/particles/nitro_flame.tscn" type="PackedScene" id=43]
[ext_resource path="res://scenes/particles/death_explosion_cpu.tscn" type="PackedScene" id=44]
[ext_resource path="res://scenes/particles/death_smoke_cpu.tscn" type="PackedScene" id=45]
[ext_resource path="res://scenes/particles/rocket_flame.tscn" type="PackedScene" id=46]
[ext_resource path="res://scenes/particles/rocket_flame_cpu.tscn" type="PackedScene" id=47]
[ext_resource path="res://scenes/particles/drift_smoke_cpu.tscn" type="PackedScene" id=48]
[ext_resource path="res://scenes/particles/muzzle_flash_cpu.tscn" type="PackedScene" id=49]
[ext_resource path="res://scenes/particles/muzzle_flash.tscn" type="PackedScene" id=50]
[ext_resource path="res://scripts/managers/mirror_manager.gd" type="Script" id=54]
[ext_resource path="res://scripts/cameras_&_ui/menu_timer.gd" type="Script" id=55]
[ext_resource path="res://scripts/cameras_&_ui/next_stream_timer.gd" type="Script" id=56]
[ext_resource path="res://scenes/particles/overcharge_flame.tscn" type="PackedScene" id=57]
[ext_resource path="res://scripts/cameras_&_ui/loading_animation.gd" type="Script" id=58]
[ext_resource path="res://scenes/particles/overcharge_flame_cpu.tscn" type="PackedScene" id=59]
[ext_resource path="res://scenes/particles/heart_flame.tscn" type="PackedScene" id=60]
[ext_resource path="res://scenes/particles/heart_flame_cpu.tscn" type="PackedScene" id=61]
[ext_resource path="res://scripts/managers/loading_manager.gd" type="Script" id=62]
[ext_resource path="res://scripts/managers/extrapolation_manager.gd" type="Script" id=63]
[ext_resource path="res://scripts/managers/material_manager.gd" type="Script" id=65]
[ext_resource path="res://scripts/managers/resource_manager.gd" type="Script" id=66]
[ext_resource path="res://scripts/managers/deletion_manager.gd" type="Script" id=68]
[ext_resource path="res://resources/sounds/global_impacts/CSDS HIT CLEAN The Empire.wav" type="AudioStream" id=69]
[ext_resource path="res://resources/sounds/global_impacts/CSDS HIT AGGRESSIVE Gun Fun.wav" type="AudioStream" id=70]
[ext_resource path="res://resources/theme/main.theme" type="Theme" id=71]
[ext_resource path="res://scripts/audio/global_sound_effect.gd" type="Script" id=72]
[ext_resource path="res://resources/environments/the_calm.tres" type="Environment" id=73]
[ext_resource path="res://scripts/audio/global_audio.gd" type="Script" id=76]
[ext_resource path="res://resources/sounds/cameras_&_ui/switch_button_push_small_05.wav" type="AudioStream" id=90]
[ext_resource path="res://scripts/cameras_&_ui/sub_viewport.gd" type="Script" id=91]
[ext_resource path="res://scripts/managers/menu_input_manager.gd" type="Script" id=107]

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 1 )

[sub_resource type="World" id=24]
environment = ExtResource( 73 )

[sub_resource type="DynamicFont" id=21]
size = 25
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=22]
default_font = SubResource( 21 )
Label/colors/font_outline_modulate = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=19]
resource_name = "loading"
length = 2.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2 ),
"transitions": PoolRealArray( 0.5, 0.5, 1, 2 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 2 ),
"transitions": PoolRealArray( 0.5, 1, 0.5, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}

[sub_resource type="QuadMesh" id=15]

[sub_resource type="ProceduralSky" id=13]
sky_top_color = Color( 0.560784, 0.843137, 1, 1 )
sky_horizon_color = Color( 0.717647, 0.87451, 1, 1 )
ground_bottom_color = Color( 0.8, 0.604, 0.464, 1 )
ground_horizon_color = Color( 0.909804, 0.752941, 0.631373, 1 )
sun_latitude = 32.0
sun_longitude = -100.0

[sub_resource type="Environment" id=14]
background_mode = 2
background_sky = SubResource( 13 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.5
ambient_light_sky_contribution = 0.4
tonemap_mode = 3
ss_reflections_enabled = true
ss_reflections_max_steps = 512
ss_reflections_fade_in = 1e-05
ss_reflections_fade_out = 1e-05
ss_reflections_roughness = false

[node name="RootControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 7 )
__meta__ = {
"__editor_plugin_screen__": "2D"
}

[node name="BackgroundShader" type="ColorRect" parent="."]
visible = false
material = SubResource( 9 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.992157, 0.337255, 0.00784314, 1 )

[node name="Current" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LoadingScreenContainer" type="ViewportContainer" parent="Current"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.0224915
margin_bottom = 0.0224915
stretch = true
script = ExtResource( 10 )

[node name="Viewport" type="Viewport" parent="Current/LoadingScreenContainer"]
size = Vector2( 640, 360 )
own_world = true
world = SubResource( 24 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
script = ExtResource( 91 )

[node name="Spatial" type="Spatial" parent="Current/LoadingScreenContainer/Viewport"]
physics_interpolation_mode = 2

[node name="Camera" type="Camera" parent="Current/LoadingScreenContainer/Viewport/Spatial"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5, 0 )
fov = 50.0

[node name="Particles" parent="Current/LoadingScreenContainer/Viewport/Spatial" instance=ExtResource( 4 )]

[node name="Loading" type="AspectRatioContainer" parent="Current"]
anchor_right = 1.0
anchor_bottom = 1.0
ratio = 1.778

[node name="Control" type="Control" parent="Current/Loading"]
margin_top = 0.0224915
margin_right = 640.0
margin_bottom = 359.978

[node name="ColorRect" type="ColorRect" parent="Current/Loading/Control"]
anchor_left = 0.42
anchor_top = 0.46
anchor_right = 0.58
anchor_bottom = 0.54
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Current/Loading/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 71 )
text = "LOADING"
align = 1
valign = 1

[node name="FrontContainer" type="AspectRatioContainer" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
ratio = 1.778
script = ExtResource( 5 )

[node name="Loading" type="Control" parent="FrontContainer"]
margin_top = 0.0224915
margin_right = 640.0
margin_bottom = 359.978

[node name="Label" type="Label" parent="FrontContainer/Loading"]
anchor_right = 0.192
anchor_bottom = 0.12
margin_left = 5.0
margin_top = 13.7514
margin_right = -5.0
margin_bottom = 3.75142
theme = SubResource( 22 )
text = "LOADING"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="FrontContainer/Loading/Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FrontContainer/Loading"]
root_node = NodePath("../Label")
anims/RESET = SubResource( 18 )
anims/loading = SubResource( 19 )
script = ExtResource( 58 )

[node name="SettingsManager" type="Node" parent="."]
script = ExtResource( 6 )

[node name="MenuManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="MenuInputManager" type="Node" parent="MenuManager"]
script = ExtResource( 107 )

[node name="MirrorManager" type="Node" parent="."]
script = ExtResource( 54 )
__meta__ = {
"_editor_description_": ""
}

[node name="ResourceManager" type="Node" parent="."]
script = ExtResource( 66 )

[node name="MaterialManager" type="Node" parent="."]
script = ExtResource( 65 )

[node name="Precompiler" type="ViewportContainer" parent="MaterialManager"]
anchor_left = -1.0
anchor_top = -1.0
anchor_right = -1.0
anchor_bottom = -1.0
margin_right = 4.0
margin_bottom = 4.0
script = ExtResource( 26 )

[node name="Viewport" type="Viewport" parent="MaterialManager/Precompiler"]
size = Vector2( 4, 4 )
own_world = true
handle_input_locally = false
render_target_update_mode = 3
shadow_atlas_size = 4096

[node name="Camera" type="Camera" parent="MaterialManager/Precompiler/Viewport"]

[node name="MeshInstance" type="MeshInstance" parent="MaterialManager/Precompiler/Viewport/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
portal_mode = 3
mesh = SubResource( 15 )

[node name="Particles" type="Spatial" parent="MaterialManager/Precompiler/Viewport/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )

[node name="Particles" parent="MaterialManager/Precompiler/Viewport/Camera/Particles" instance=ExtResource( 31 )]

[node name="Particles2" parent="MaterialManager/Precompiler/Viewport/Camera/Particles" instance=ExtResource( 29 )]

[node name="Particles3" parent="MaterialManager/Precompiler/Viewport/Camera/Particles" instance=ExtResource( 27 )]

[node name="Particles4" parent="MaterialManager/Precompiler/Viewport/Camera/Particles" instance=ExtResource( 35 )]

[node name="Particles5" parent="MaterialManager/Precompiler/Viewport/Camera/Particles" instance=ExtResource( 37 )]

[node name="Particles6" parent="MaterialManager/Precompiler/Viewport/Camera/Particles" instance=ExtResource( 36 )]

[node name="Particles7" parent="MaterialManager/Precompiler/Viewport/Camera/Particles" instance=ExtResource( 33 )]

[node name="Particles8" parent="MaterialManager/Precompiler/Viewport/Camera/Particles" instance=ExtResource( 34 )]
script = null

[node name="Particles14" parent="MaterialManager/Precompiler/Viewport/Camera/Particles" instance=ExtResource( 60 )]
script = null

[node name="Particles9" parent="MaterialManager/Precompiler/Viewport/Camera/Particles" instance=ExtResource( 50 )]

[node name="Particles10" parent="MaterialManager/Precompiler/Viewport/Camera/Particles" instance=ExtResource( 43 )]

[node name="Particles13" parent="MaterialManager/Precompiler/Viewport/Camera/Particles" instance=ExtResource( 57 )]

[node name="Particles11" parent="MaterialManager/Precompiler/Viewport/Camera/Particles" instance=ExtResource( 42 )]

[node name="Particles12" parent="MaterialManager/Precompiler/Viewport/Camera/Particles" instance=ExtResource( 46 )]

[node name="CPUParticles" type="Spatial" parent="MaterialManager/Precompiler/Viewport/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )

[node name="CPUParticles" parent="MaterialManager/Precompiler/Viewport/Camera/CPUParticles" instance=ExtResource( 32 )]

[node name="CPUParticles2" parent="MaterialManager/Precompiler/Viewport/Camera/CPUParticles" instance=ExtResource( 30 )]

[node name="CPUParticles3" parent="MaterialManager/Precompiler/Viewport/Camera/CPUParticles" instance=ExtResource( 28 )]

[node name="CPUParticles4" parent="MaterialManager/Precompiler/Viewport/Camera/CPUParticles" instance=ExtResource( 44 )]

[node name="CPUParticles5" parent="MaterialManager/Precompiler/Viewport/Camera/CPUParticles" instance=ExtResource( 45 )]

[node name="CPUParticles6" parent="MaterialManager/Precompiler/Viewport/Camera/CPUParticles" instance=ExtResource( 48 )]

[node name="CPUParticles7" parent="MaterialManager/Precompiler/Viewport/Camera/CPUParticles" instance=ExtResource( 38 )]

[node name="CPUParticles8" parent="MaterialManager/Precompiler/Viewport/Camera/CPUParticles" instance=ExtResource( 39 )]
script = null

[node name="CPUParticles14" parent="MaterialManager/Precompiler/Viewport/Camera/CPUParticles" instance=ExtResource( 61 )]
script = null

[node name="CPUParticles9" parent="MaterialManager/Precompiler/Viewport/Camera/CPUParticles" instance=ExtResource( 49 )]

[node name="CPUParticles10" parent="MaterialManager/Precompiler/Viewport/Camera/CPUParticles" instance=ExtResource( 41 )]

[node name="CPUParticles13" parent="MaterialManager/Precompiler/Viewport/Camera/CPUParticles" instance=ExtResource( 59 )]

[node name="CPUParticles11" parent="MaterialManager/Precompiler/Viewport/Camera/CPUParticles" instance=ExtResource( 40 )]

[node name="CPUParticles12" parent="MaterialManager/Precompiler/Viewport/Camera/CPUParticles" instance=ExtResource( 47 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="MaterialManager/Precompiler/Viewport/Camera"]
environment = SubResource( 14 )

[node name="DeletionManager" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 68 )

[node name="LoadingManager" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 62 )

[node name="ExtrapolationManager" type="Node" parent="."]
script = ExtResource( 63 )

[node name="GlobalAudio" type="Node" parent="."]
script = ExtResource( 76 )

[node name="KillImpact" type="AudioStreamPlayer" parent="GlobalAudio"]
stream = ExtResource( 70 )
volume_db = -5.0
bus = "Effects"
script = ExtResource( 72 )
starts = PoolRealArray( 0.21, 6.57, 12.42, 18.61 )

[node name="Timer" type="Timer" parent="GlobalAudio/KillImpact"]
wait_time = 4.0
one_shot = true

[node name="SniperImpact" type="AudioStreamPlayer" parent="GlobalAudio"]
stream = ExtResource( 69 )
volume_db = -5.0
bus = "Effects"
script = ExtResource( 72 )
starts = PoolRealArray( 0.21, 5.76, 12, 17.36 )

[node name="Timer" type="Timer" parent="GlobalAudio/SniperImpact"]
wait_time = 4.0
one_shot = true

[node name="ButtonPressAudio" type="AudioStreamPlayer" parent="GlobalAudio"]
stream = ExtResource( 23 )
bus = "Effects"
script = ExtResource( 9 )

[node name="EscapeAudio" type="AudioStreamPlayer" parent="GlobalAudio"]
stream = ExtResource( 24 )
bus = "Effects"
script = ExtResource( 9 )

[node name="SliderChangeAudio" type="AudioStreamPlayer" parent="GlobalAudio"]
stream = ExtResource( 90 )
bus = "Effects"
script = ExtResource( 9 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="GlobalAudio"]
pause_mode = 2
stream = ExtResource( 21 )
bus = "Music"
script = ExtResource( 20 )

[node name="NextStreamTimer" type="Timer" parent="GlobalAudio/MusicPlayer"]
script = ExtResource( 56 )

[node name="MenuTimer" type="Timer" parent="GlobalAudio/MusicPlayer"]
wait_time = 600.0
one_shot = true
autostart = true
script = ExtResource( 55 )

[connection signal="visibility_changed" from="FrontContainer/Loading/Label" to="FrontContainer/Loading/AnimationPlayer" method="_on_Loading_visibility_changed"]
[connection signal="visibility_changed" from="MaterialManager/Precompiler" to="MaterialManager/Precompiler" method="_on_Precompiler_visibility_changed"]
[connection signal="resources_loaded" from="LoadingManager" to="GlobalAudio/MusicPlayer" method="_on_LoadingManager_resources_loaded"]
[connection signal="timeout" from="GlobalAudio/KillImpact/Timer" to="GlobalAudio/KillImpact" method="_on_Timer_timeout"]
[connection signal="timeout" from="GlobalAudio/SniperImpact/Timer" to="GlobalAudio/SniperImpact" method="_on_Timer_timeout"]
[connection signal="timeout" from="GlobalAudio/MusicPlayer/MenuTimer" to="GlobalAudio/MusicPlayer" method="_on_MenuTimer_timeout"]
[connection signal="tree_entered" from="GlobalAudio/MusicPlayer/MenuTimer" to="GlobalAudio/MusicPlayer/MenuTimer" method="_on_MenuTimer_tree_entered"]
